tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__WhenAllYouHaveis-AAAAAAAAAAAAAAAAAAAGyg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1738,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...the whole world looks like a nail. \n\nWhen looking for good tool materials, see \"GregTech Material Tools\" tab in NEI. Remember that NEI bookmarks are your friends.\n\nThe GT tools each have special uses.\n\n§lScrewdriver§r - Used on covers to change their behavior or on machines to change their input mode.\n\n§lWrench§r - Used to change the output direction on a GT machine, or to break it. Can also disconnect/connect pipes or enable their built in shutter.\n\n§lCrowbar§r - Remove covers from machines or pipes.\n\n§lWire cutters§r - Connecting/disconnecting/breaking wires/cables.\n\n§lSoft mallet§r - Turning machines on/off.\n\n§lHammer§r - Prospecting for ores in a limited way in front of you, smashing ore blocks into crushed ores, and muffling machine sounds.\n\n§lPlunger§r - Drain fluids from a machine or tank\n\n[note]On a side note, Tin Pipes need a Steel Wrench to dismantle, so don't place them randomly, and pay attention to material levels![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lWhen All You Have is a Hammer...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
