tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__XPUsage-AAAAAAAAAAAAAAAAAAAB8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 498,
  "prerequisites": [
    36,
    74
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Exploring some dungeons or fighting mobs probably gave you a lot of XP. Better use it to get iron, copper, tin, or other useful dusts before you die.\n\nPlace your tank on the ground and a drain on top. Now you can fill it with XP.\n\nBy the way, you discovered that while the seared tank doesn't hold much, it doesn't lose contents when broken, and full tanks can stack. I wonder if that information is useful...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lXP Usage?!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36,
    74
  ],
  "rewards": [],
  "tasks": []
}
