tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__YouNeedMOOOOOOOR-AAAAAAAAAAAAAAAAAAAB5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 485,
  "prerequisites": [
    24
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's time to feed your new coke oven with some wood to get more charcoal. You're looking for the most efficient way to plant trees. Try to find some spruce saplings and some jungle saplings. Both can be planted in a 2x2 grid to get bigger trees.\n\nThe Rainforest Oak is also a great source of wood, and only needs one sapling. Be warned though, this tree is §lmuch taller§r than the Jungle or Spruce trees\n\n[warn]Warning label: Do not put your pets in the microwave to dry them. And do not plant any of these rewards in the middle of your base.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lYou Need MOOOOOOORE Wood",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    24
  ],
  "rewards": [],
  "tasks": []
}
