tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__YourFirstFlintSw-h_PK8qnyR9CBUoOhT9nwzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12245929296792252620,
  "prerequisites": [
    33
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's time to upgrade your wooden sword a little.\n\nYou only need one stick, one bone, and one flint to create the new weapon. However, it's recommended that you gather extra flint since it can be used to repair the sword.\n\nYou won't be able to kill a Wither with it now, but you can upgrade and improve this tool later.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lYour First Flint Sword",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    33
  ],
  "rewards": [],
  "tasks": []
}
